# neuq_soccer

./: README.md
code/Strategy/header/: BaseRobot.h  adapter.h  constant.h  platform.h
code/Strategy/src/: BaseRobot.cpp  main.cpp
note/: 第一次分享.md
task/: README.md
task/Strategy/header/: BaseRobot.h  globalVariable.h  platform.h  stdafx.h
task/Strategy/src/: BaseRobot.cpp  main.cpp
yizhi_1/: CMakeLists.txt
yizhi_1/Strategy/: DLLStrategy.def
yizhi_1/Strategy/header/: BaseRobot.h  globalVariable.h
yizhi_1/Strategy/src/: BaseRobot.cpp  dllmain.cpp  main.cpp  stdafx.cpp
